implementing a naive bayes classifier from scratch

--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -421,10 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# our choice of algorithm for minimizing the loss function is stochastic gradient descent - as an exercise in the future, can implement multiple algorithms\n",
     "def stochastic_gradient_descent(y, X, weights, bias, learning_rate):\n",
     "    # iterate over all the possible data points:\n",
     "    m = X.shape[0]\n",
